# 3D-Renderer

./: 3DGA_Coursework.sln  CMakeLists.txt  README.md
3DGA_Coursework/: 3DGA_Coursework.vcxproj  3DGA_Coursework.vcxproj.filters  Camera.cpp  Camera.h  DirectionalLight.h  Light.h  Material.cpp  Material.h  Mesh.h  Model.cpp  Model.h  OBJLoader.h  Object.cpp  Object.h  PointLight.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Source.cpp  SpotLight.h  Texture.cpp  Texture.h  Transform.cpp  Transform.h  default_fs.fs  fs_model.fs  screen.fs
3DGA_Coursework/Models/: beveled.mtl  car.mtl  road.mtl  tree1.mtl
assets/Models/: 1x4.mtl  building.mtl  lamp.mtl  tree2.mtl
assets/Shaders/: fs_model.fs  screen.vs  vs_model.vs
src/: CMakeLists.txt
src/app/: CMakeLists.txt  main.cpp
src/app/core/: Model.cpp  Model.hpp  Object.hpp  Transform.cpp  Transform.hpp
src/app/graphics/: Camera.cpp  Camera.hpp  Light.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp
src/app/loaders/: OBJLoader.cpp  OBJLoader.hpp
